--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,16 @@ Source: opx-system-utils
 Section: net
 Priority: optional
 Maintainer: Dell EMC <ops-dev@lists.openswitch.net>
-Build-Depends: debhelper (>= 9),dh-autoreconf,dh-systemd,autotools-dev,libopx-common-dev (>= 1.4.0),
-               python-dev, dh-python, libsystemd-dev, libcurl-dev, python-requests
+Build-Depends: debhelper (>= 9),
+ autotools-dev,
+ dh-autoreconf,
+ dh-python,
+ dh-systemd,
+ libcurl-dev,
+ libopx-common-dev (>= 1.4.0),
+ libsystemd-dev,
+ python-dev,
+ python-requests,
 Standards-Version: 3.9.3
 Vcs-Browser: https://github.com/open-switch/opx-system-utils
 Vcs-Git: https://github.com/open-switch/opx-system-utils.git
