Change virtual package depends to real package
* Lintian: virtual-package-depends-without-real-package-depends

Signed-off-by: Tyler Heucke <tyler@heucke.io>

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9),
  dh-autoreconf,
  dh-python,
  dh-systemd,
- libcurl-dev,
+ libcurl4-openssl-dev,
  libopx-common-dev (>= 1.4.0),
  libsystemd-dev,
  python-dev,
