--- a/debian/control
+++ b/debian/control
@@ -24,6 +24,7 @@ Description: This package contains system utilities.
 
 Package: libopx-system-utils-dev
 Architecture: any
+Section: libdevel
 Depends: ${misc:Depends}, libopx-common-dev (>= 1.4.0), libopx-system-utils1 (=${binary:Version})
 Description: This package contains system utilities.
 
