Add missing python dependency
* Lintian: python-script-but-no-python-dep

Signed-off-by: Tyler Heucke <tyler@heucke.io>

--- a/debian/control
+++ b/debian/control
@@ -31,5 +31,5 @@ Description: This package contains system utilities.
 
 Package: opx-system-utils
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python-requests
+Depends: ${shlibs:Depends}, ${misc:Depends}, python, ${python:Depends}, python-requests
 Description: This package contains system utilities
