Clean up autotools code
* Alphabetize automake script targets
* Use pkg-config for libcurl dependency
* Use standard include paths for opx-common-utils dep
* Remove unused code in configure.ac

Signed-off-by: Tyler Heucke <tyler@heucke.io>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,35 +1,33 @@
-ACLOCAL_AMFLAGS=-I m4
+ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = inc
 
-pyutilsdir= /usr/lib/opx/sys-utils
-pyutils_SCRIPTS = scripts/lib/python/*.py
+COMMON_HARDEN_FLAGS = -fexceptions -fstack-protector-strong -fstack-protector-all -D_FORTIFY_SOURCE=2 -Wall -Wformat -Wformat-security -Werror
+C_HARDEN_FLAGS = -Wimplicit-function-declaration
+LD_HARDEN_FLAGS = -Wl,-z,defs -Wl,-z,now
 
-uidir= /usr/lib/opx/sys-utils/templates
-ui_SCRIPTS = scripts/lib/python/templates/*
+lib_LTLIBRARIES = libopx_system_utils.la
+libopx_system_utils_la_SOURCES = src/sys_utils_file_transfer.c
+libopx_system_utils_la_CPPFLAGS = $(COMMON_HARDEN_FLAGS) $(libcurl_CFLAGS) -D_FILE_OFFSET_BITS=64 -fPIC -I$(top_srcdir)/inc/opx
+libopx_system_utils_la_CXXFLAGS = -std=c++11
+libopx_system_utils_la_CFLAGS = $(C_HARDEN_FLAGS)
+libopx_system_utils_la_LDFLAGS = $(LD_HARDEN_FLAGS) -shared -version-info 1:1:0
+libopx_system_utils_la_LIBADD = $(libcurl_LIBS) -lopx_common
 
-staticdir= /usr/lib/opx/sys-utils/images
-static_SCRIPTS = scripts/lib/python/images/*
-
-webdir= /usr/lib/opx/sys-utils/scripts
-web_SCRIPTS = scripts/lib/python/scripts/*
-
-pluginsdir= /usr/lib/opx/sys-utils/plugins
+pluginsdir = /usr/lib/opx/sys-utils/plugins
 plugins_SCRIPTS = scripts/lib/python/plugins/*.py
 
-lib_LTLIBRARIES=libopx_system_utils.la
-libopx_system_utils_la_SOURCES= src/sys_utils_file_transfer.c
+pyutilsdir = /usr/lib/opx/sys-utils
+pyutils_SCRIPTS = scripts/lib/python/*.py
 
+staticdir = /usr/lib/opx/sys-utils/images
+static_SCRIPTS = scripts/lib/python/images/*
 
-COMMON_HARDEN_FLAGS=-fexceptions -fstack-protector-strong -fstack-protector-all -D_FORTIFY_SOURCE=2 -Wall -Wformat -Wformat-security -Werror
-C_HARDEN_FLAGS=-Wimplicit-function-declaration
-LD_HARDEN_FLAGS=-Wl,-z,defs -Wl,-z,now
+uidir = /usr/lib/opx/sys-utils/templates
+ui_SCRIPTS = scripts/lib/python/templates/*
 
-libopx_system_utils_la_CPPFLAGS= -D_FILE_OFFSET_BITS=64 -I$(top_srcdir)/inc/opx -I$(includedir)/opx $(COMMON_HARDEN_FLAGS) -fPIC
-libopx_system_utils_la_CXXFLAGS=-std=c++11
-libopx_system_utils_la_CFLAGS=$(C_HARDEN_FLAGS)
-libopx_system_utils_la_LDFLAGS=-lcurl -shared -version-info 1:1:0 $(LD_HARDEN_FLAGS)
-libopx_system_utils_la_LIBADD=-lopx_common
+webdir = /usr/lib/opx/sys-utils/scripts
+web_SCRIPTS = scripts/lib/python/scripts/*
 
+systemdconfdir = /lib/systemd/system
+systemdconf_DATA = scripts/init/*.service
 
-systemdconfdir=/lib/systemd/system
-systemdconf_DATA = $(top_srcdir)/scripts/init/*.service
