--- a/debian/control
+++ b/debian/control
@@ -2,25 +2,45 @@ Source: opx-system-utils
 Section: net
 Priority: optional
 Maintainer: Dell EMC <ops-dev@lists.openswitch.net>
-Build-Depends: debhelper (>= 9),dh-autoreconf,dh-systemd,autotools-dev,libopx-common-dev (>= 1.4.0),
-               python-dev, dh-python, libsystemd-dev, libcurl-dev, python-requests
-Standards-Version: 3.9.3
+Build-Depends: debhelper (>= 9),
+ autotools-dev,
+ dh-autoreconf,
+ dh-python,
+ dh-systemd,
+ libcurl4-openssl-dev,
+ libopx-common-dev (>= 1.4.0),
+ libsystemd-dev,
+ pkg-config,
+ python-dev,
+ python-requests,
+Standards-Version: 3.9.8
 Vcs-Browser: https://github.com/open-switch/opx-system-utils
 Vcs-Git: https://github.com/open-switch/opx-system-utils.git
 
 Package: libopx-system-utils1
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libopx-common1 (>= 1.4.0), libcurl3-nss
+Depends: ${shlibs:Depends},
+ ${misc:Depends},
+ libcurl3,
+ libopx-common1 (>= 1.4.0),
 Description: This package contains system utilities.
-
+ OPX system utilities for monitoring equipment health.
 
 Package: libopx-system-utils-dev
 Architecture: any
-Depends: ${misc:Depends}, libopx-common-dev (>= 1.4.0), libopx-system-utils1 (=${binary:Version})
+Section: libdevel
+Depends: ${misc:Depends},
+ libopx-common-dev (>= 1.4.0),
+ libopx-system-utils1 (=${binary:Version}),
 Description: This package contains system utilities.
-
+ OPX system utilities for monitoring equipment health.
 
 Package: opx-system-utils
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python-requests
+Depends: ${shlibs:Depends},
+ ${misc:Depends},
+ ${python:Depends},
+ python,
+ python-requests,
 Description: This package contains system utilities
+ OPX system utilities for monitoring equipment health.
